Creacion y configuracion de proyecto backend

--- a/MiTramite_Back/appsettings.Development.json
+++ b/MiTramite_Back/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Host=aws-1-us-east-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.iqgrhhyounqtdimlnnpl;Password=SNqrbgR-H-eEEk4;Ssl Mode=Require;Trust Server Certificate=true;"
   }
 }
