--- a/MiTramite_Back/appsettings.json
+++ b/MiTramite_Back/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Host=aws-1-us-east-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.iqgrhhyounqtdimlnnpl;Password=SNqrbgR-H-eEEk4;Ssl Mode=Require;Trust Server Certificate=true;"
+  }
 }
