--- a/MiTramite_Front/WAMiTramite/WAMiTramite.csproj
+++ b/MiTramite_Front/WAMiTramite/WAMiTramite.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\MiTramite_Shared\MiTramite_Shared.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
